--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">ClanBattleApp</string>
     <string name="title_home">Home</string>
     <string name="title_sources">sources</string>
+    <string name="mock_text">MockText</string>
+    <string name="title_activity_onboarding">OnboardingActivity</string>
 </resources>
