--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="title_activity_onboarding">OnboardingActivity</string>
     <string name="map">Map</string>
     <string name="chat">Chat</string>
+    <string name="rank">Rank</string>
+    <string name="search">Search</string>
+    <string name="settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
