--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_clan">ClanActivity</string>
+    <string name="mapsKey">AIzaSyCw5poDVzlpLmrZYE0-wkc5xqRD7TOCM60</string>
 </resources>
