--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="settings">Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Coming soon!...</string>
     <string name="title_activity_clan">ClanActivity</string>
     <string name="mapsKey">AIzaSyCw5poDVzlpLmrZYE0-wkc5xqRD7TOCM60</string>
 </resources>
