--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,9 @@
     <string name="hello_blank_fragment">Coming soon!...</string>
     <string name="title_activity_clan">ClanActivity</string>
     <string name="mapsKey">AIzaSyCw5poDVzlpLmrZYE0-wkc5xqRD7TOCM60</string>
+
+    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
+    <string name="facebook_application_id" translatable="false">492254917917746</string>
+    <string name="facebook_login_protocol_scheme" translatable="false">fb492254917917746</string>
+
 </resources>
